storage UT ongoing