@@ -13,7 +13,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * Instrumented test, which will execute on an Android device.
@@ -23,10 +23,12 @@ import java.nio.file.Path;
 @RunWith(AndroidJUnit4.class)
 public class DownloadServiceInstrumentedTest {
 
+    private Context context;
     private DownloadService downloadService;
 
     @Before
     public void init() {
+        context = InstrumentationRegistry.getInstrumentation().getTargetContext();
         downloadService = new DownloadServiceImpl();
     }
 
@@ -41,12 +43,12 @@ public class DownloadServiceInstrumentedTest {
         assertEquals("com.quatre.phoenix", appContext.getPackageName());
     }
 
-
+    // TODO
     // BitmapFactory.decodeStream() needs Instrumented
     @Test
     public void testStoreAllPicturesOnInternalMemory() throws IOException {
         final var pictures = downloadService.getAllPicturesFromUrl("https://manhuaplus.com/manga/demon-magic-emperor01/chapter-717/", "img");
-        final var path = Path.of("");
+        final var path = Paths.get(context.getFilesDir().getPath());
         downloadService.storeAllPicturesOnInternalMemory(pictures, "MagicEmperor", "717", path.toAbsolutePath().toString());
         final var files = FileUtils.getFilesFromFolder(path);
         assertEquals(10, files.size());
