@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class FileUtils {
@@ -12,7 +13,7 @@ public class FileUtils {
         try (Stream<Path> stream = Files.walk(path)) {
             return stream
                     .filter(file -> !Files.isDirectory(file))
-                    .toList();
+                    .collect(Collectors.toList());
         }
     }
 }
